update 01.20.08 : bản sửa test và thêm 1 lớp điều kiện cho autobid